src/test/deca/context/valid/wobj/test_print.deca
// Description:
//    Programme minimaliste utilisant print d'un string.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024

{
        print("Hello, world!");
}
